# gw-provisioning-application

./: CHANGELOG.md  NOTICE  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
cov_docker_script/: component_config.json  configure_options.conf
source/: Makefile.am  autowan.c  gw_prov_sm.c  gw_prov_sm_generic.c  gw_prov_sm_generic_main.c
source/include/: autowan.h  gw_prov_abstraction.h
source/test/: CcspGwProvAppTest.cpp  Makefile.am  run_ut.sh
